CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(raft LANGUAGES CXX)

FIND_PACKAGE(Threads REQUIRED)

#
# C++ 14
#
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_FLAGS         "${CMAKE_CXX_FLAGS} -W -Wall -Wextra -Wno-multichar -pedantic")
SET(CMAKE_CXX_FLAGS_DEBUG   " -O0 -ggdb -fprofile-arcs -ftest-coverage")
SET(CMAKE_CXX_FLAGS_RELEASE " -O2")

INCLUDE(CTest)

# GTest
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/deps/gtest)
# SPDLog
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/deps/spdlog)
# Json
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/deps/json)

# Set RAFT include dir
SET(RAFT_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/include)

# Test app
ADD_SUBDIRECTORY(tests)

INSTALL(
    DIRECTORY include/
    DESTINATION include
    COMPONENT dev
)
